--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
   </form>
   <br>
   <div style="margin-top: 8px; font-size: 0.98em; color: #14307f; font-weight:600; text-align:center;">
-Call or text us at <a href="tel:2532546538" style="color:#14307f;text-decoration:underline;">253-254-6538</a><br>
+Call or text us at <a href="tel:2532546538" style="color:#14307f;text-decoration:underline;">253-254-6538</a><br><br>
   </div>
 </section>
 
