--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   max-height: none;
   object-fit: contain;
   object-position: center;
+  display: block;
+  margin-bottom: 10px;
 }
     .student-login {
       display: flex;
