--- a/index.html
+++ b/index.html
@@ -595,9 +595,12 @@
     </button>
   </form>
   <br>
-  <div style="margin-top: 8px; font-size: 0.98em; color: #14307f; font-weight:600; text-align:center;">
-Call or text us at <a href="tel:2532546538" style="color:#14307f;text-decoration:underline;">253-254-6538</a><br><br>
-  </div>
+<div style="margin-top: 8px; font-size: 0.98em; color: #14307f; font-weight:600; text-align:center;">
+  Call us at 
+  <a href="tel:2532546538" style="color:#14307f;text-decoration:underline;">253-254-6538</a> 
+  or 
+  <a href="sms:2532546538" style="color:#14307f;text-decoration:underline;">Text us</a>
+</div>
 </section>
 
   <!-- Popup Modal for Images -->
