--- a/index.html
+++ b/index.html
@@ -408,9 +408,13 @@
         <img src="best_of_tacoma_2017.jpg" alt="Best of Tacoma 2017" onclick="openImgPopup(this)" />
         <img src="best_of_tacoma_2018.jpg" alt="Best of Tacoma 2018" onclick="openImgPopup(this)" />
         <img src="best_of_tacoma_2019.jpg" alt="Best of Tacoma 2019" onclick="openImgPopup(this)" />
+        <img src="best_of_tacoma_2020.jpg" alt="Best of Tacoma 2020" onclick="openImgPopup(this)" />
         <img src="best_of_tacoma_2020_excellence_award.jpg" alt="Best of Tacoma 2020 Excellence Award" onclick="openImgPopup(this)" />
+        <img src="best_of_tacoma_2021.jpg" alt="Best of Tacoma 2021" onclick="openImgPopup(this)" />
         <img src="best_of_tacoma_2022.jpg" alt="Best of Tacoma 2022" onclick="openImgPopup(this)" />
         <img src="best_of_tacoma_2023.jpg" alt="Best of Tacoma 2023" onclick="openImgPopup(this)" />
+        <img src="best_of_tacoma_2024.jpg" alt="Best of Tacoma 2024" onclick="openImgPopup(this)" />
+        <img src="best_of_tacoma_2025.jpg" alt="Best of Tacoma 2025" onclick="openImgPopup(this)" />
       </div>
     </section>
 
