--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           <h3>Professor Marcello C Monteiro</h3>
           <p class="bio-short">Master Monteiro is well known in Brazil as a teacher and coach for creating fighting strategies...</p>
           <p class="bio-full" style="display:none;">
-            Marcello C. Monteiro is recognized worldwide for his advanced and detailed instruction. He’s a certified <strong>6th Degree Black Belt</strong> under the legendary Ricardo de la Riva and has produced numerous champions. His systematic approach breaks down complex techniques for students at all levels, building the foundation for a successful jiu-jitsu journey.
+            Marcello C. Monteiro is recognized worldwide for his advanced and detailed instruction. He’s a certified <strong>6th Degree Black Belt</strong> under the legendary Ricardo de la Riva and has produced numerous champions. His systematic approach breaks down complex techniques for students at all levels, building the foundation for a successful Jiu-Jitsu journey.
           </p>
           <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
         </div>
