--- a/index.html
+++ b/index.html
@@ -418,17 +418,34 @@
 
     <!-- Academy Lineage -->
     <h2 class="lineage-header">Academy Lineage</h2>
-    <div class="lineage-main-image">
-      <img src="lineage.jpg" alt="Academy Lineage" onclick="openImgPopup(this)" />
-    </div>
-    <div class="lineage-photos">
-      <img src="mitsuyo_maeda.jpeg" alt="Mitsuyo Maeda" onclick="openImgPopup(this)" />
-      <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." onclick="openImgPopup(this)" />
-      <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." onclick="openImgPopup(this)" />
-      <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" onclick="openImgPopup(this)" />
-      <img src="marcello_c_montiero.jpeg" alt="Marcello C Monteiro" onclick="openImgPopup(this)" />
-      <img src="michael_proctor_sr.png" alt="Michael Proctor" onclick="openImgPopup(this)" />
-    </div>
+    
+<div class="lineage-photos">
+  <div class="lineage-person">
+    <img src="mitsuyo_maeda.jpg" alt="Mitsuyo Maeda" />
+    <div class="lineage-name">MITSUYO MAEDA</div>
+  </div>
+  <div class="lineage-person">
+    <img src="carlos_gracie_sr.jpg" alt="Carlos Gracie Sr." />
+    <div class="lineage-name">CARLOS GRACIE SR.</div>
+  </div>
+  <div class="lineage-person">
+    <img src="carlson_gracie_sr.jpg" alt="Carlson Gracie Sr." />
+    <div class="lineage-name">CARLSON GRACIE SR.</div>
+  </div>
+  <div class="lineage-person">
+    <img src="ricardo_de_la_riva.jpg" alt="Ricardo de la Riva" />
+    <div class="lineage-name">RICARDO DE LA RIVA</div>
+  </div>
+  <div class="lineage-person">
+    <img src="marcello_c_monteiro.jpg" alt="Marcello Monteiro" />
+    <div class="lineage-name">MARCELLO C. MONTEIRO</div>
+  </div>
+  <div class="lineage-person">
+    <img src="michael_proctor_sr.jpg" alt="Michael Proctor Sr." />
+    <div class="lineage-name">MICHAEL PROCTOR SR.</div>
+  </div>
+</div>
+
 
     <!-- Instructors Section -->
     <section id="instructors" class="instructors-section">
