--- a/index.html
+++ b/index.html
@@ -421,27 +421,27 @@
     
 <div class="lineage-photos">
   <div class="lineage-person">
-    <img src="mitsuyo_maeda.jpg" alt="Mitsuyo Maeda" />
+    <img src="mitsuyo_maeda.jpeg" alt="Mitsuyo Maeda" />
     <div class="lineage-name">MITSUYO MAEDA</div>
   </div>
   <div class="lineage-person">
-    <img src="carlos_gracie_sr.jpg" alt="Carlos Gracie Sr." />
+    <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." />
     <div class="lineage-name">CARLOS GRACIE SR.</div>
   </div>
   <div class="lineage-person">
-    <img src="carlson_gracie_sr.jpg" alt="Carlson Gracie Sr." />
+    <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." />
     <div class="lineage-name">CARLSON GRACIE SR.</div>
   </div>
   <div class="lineage-person">
-    <img src="ricardo_de_la_riva.jpg" alt="Ricardo de la Riva" />
+    <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" />
     <div class="lineage-name">RICARDO DE LA RIVA</div>
   </div>
   <div class="lineage-person">
-    <img src="marcello_c_monteiro.jpg" alt="Marcello Monteiro" />
+    <img src="marcello_c_monteiro.jpeg" alt="Marcello Monteiro" />
     <div class="lineage-name">MARCELLO C. MONTEIRO</div>
   </div>
   <div class="lineage-person">
-    <img src="michael_proctor_sr.jpg" alt="Michael Proctor Sr." />
+    <img src="michael_proctor_sr.png" alt="Michael Proctor Sr." />
     <div class="lineage-name">MICHAEL PROCTOR SR.</div>
   </div>
 </div>
