--- a/index.html
+++ b/index.html
@@ -160,28 +160,22 @@
       box-shadow: 0 1px 8px rgba(0,0,0,0.1);
       height: auto;
     }
-.lineage-photos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 18px;
-  margin-bottom: 40px;
-}
-
-.lineage-person {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.lineage-name {
-  font-weight: 700;
-  color: #14307f;
-  margin-top: 6px;
-  font-size: 0.95em;
-  letter-spacing: 0.5px;
-}
+    .lineage-photos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 18px;
+      margin-bottom: 40px;
+    }
+    .lineage-photos img {
+      width: 90px;
+      border-radius: 10px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.1);
+      height: 90px;
+      object-fit: cover;
+      cursor: pointer;
+      transition: transform 0.18s;
+    }
     .lineage-photos img:hover {
       transform: scale(1.08);
     }
