--- a/index.html
+++ b/index.html
@@ -167,6 +167,19 @@
       gap: 18px;
       margin-bottom: 40px;
     }
+    .lineage-person {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 100px;
+}
+.lineage-name {
+  margin-top: 6px;
+  font-weight: 600;
+  font-size: 0.92em;
+  color: #14307f;
+}
     .lineage-photos img {
       width: 90px;
       border-radius: 10px;
