--- a/index.html
+++ b/index.html
@@ -434,44 +434,30 @@
     
 <div class="lineage-photos">
   <div class="lineage-person">
-    <a href="mitsuyo_maeda.jpeg" class="popup-link">
-      <img src="mitsuyo_maeda.jpeg" alt="Mitsuyo Maeda" />
-    </a>
+    <img src="mitsuyo_maeda.jpeg" alt="Mitsuyo Maeda" onclick="openImgPopup(this)" />
     <div class="lineage-name">MITSUYO MAEDA</div>
   </div>
   <div class="lineage-person">
-    <a href="carlos_gracie_sr.jpeg" class="popup-link">
-      <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." />
-    </a>
+    <img src="carlos_gracie_sr.jpeg" alt="Carlos Gracie Sr." onclick="openImgPopup(this)" />
     <div class="lineage-name">CARLOS GRACIE SR.</div>
   </div>
   <div class="lineage-person">
-    <a href="carlson_gracie_sr.jpeg" class="popup-link">
-      <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." />
-    </a>
+    <img src="carlson_gracie_sr.jpeg" alt="Carlson Gracie Sr." onclick="openImgPopup(this)" />
     <div class="lineage-name">CARLSON GRACIE SR.</div>
   </div>
   <div class="lineage-person">
-    <a href="ricardo_de_la_riva.jpeg" class="popup-link">
-      <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" />
-    </a>
+    <img src="ricardo_de_la_riva.jpeg" alt="Ricardo de la Riva" onclick="openImgPopup(this)" />
     <div class="lineage-name">RICARDO DE LA RIVA</div>
   </div>
   <div class="lineage-person">
-    <a href="marcello_c_monteiro.jpeg" class="popup-link">
-      <img src="marcello_c_monteiro.jpeg" alt="Marcello Monteiro" />
-    </a>
+    <img src="marcello_c_monteiro.jpeg" alt="Marcello Monteiro" onclick="openImgPopup(this)" />
     <div class="lineage-name">MARCELLO C. MONTEIRO</div>
   </div>
   <div class="lineage-person">
-    <a href="michael_proctor_sr.png" class="popup-link">
-      <img src="michael_proctor_sr.png" alt="Michael Proctor Sr." />
-    </a>
+    <img src="michael_proctor_sr.png" alt="Michael Proctor Sr." onclick="openImgPopup(this)" />
     <div class="lineage-name">MICHAEL PROCTOR SR.</div>
   </div>
 </div>
-
-
 
     <!-- Instructors Section -->
     <section id="instructors" class="instructors-section">
