--- a/index.html
+++ b/index.html
@@ -634,7 +634,12 @@
 </div>
   <br>
   <br>
-
+<div style="margin-top: 18px;">
+  <img src="introductory_class.jpg" alt="Introductory Class" style="width:100%; height:auto; display:block; border-radius:10px; max-width:100%;" />
+</div>
+<br>
+  <br>
+  
   <!-- Popup Modal for Images -->
   <div id="imgModal" style="display:none;position:fixed;z-index:10000;top:0;left:0;width:100vw;height:100vh;background:rgba(14,24,40,0.85);align-items:center;justify-content:center;">
     <span onclick="closeImgPopup()" style="position:absolute;top:18px;right:32px;font-size:2.4em;color:#fff;cursor:pointer;font-weight:700;z-index:11000;">&times;</span>
