--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <div>
           <!-- ... (unchanged FAQ list as you locked) ... -->
           <div class="faq-item">
-            <div class="faq-q">1. What can BJJ and your school do for me?</div>
+            <div class="faq-q"><strong>1. What can BJJ and your school do for me?</strong></div>
             <div class="faq-a">BJJ is a highly effective form of self-defense that promotes a healthy lifestyle. Adding BJJ to your life will help you get in shape, gain self-confidence and self-discipline, and relieve stress while forming a network of like-minded people sure to motivate and inspire you. Our Brazilian Jiu-Jitsu Academy in Tacoma offers a safe, friendly, and family-style atmosphere that many of our students consider their second home.</div>
           </div>
           <div class="faq-item">
