--- a/index.html
+++ b/index.html
@@ -554,55 +554,55 @@
             <div class="faq-a">BJJ is a highly effective form of self-defense that promotes a healthy lifestyle. Adding BJJ to your life will help you get in shape, gain self-confidence and self-discipline, and relieve stress while forming a network of like-minded people sure to motivate and inspire you. Our Brazilian Jiu-Jitsu Academy in Tacoma offers a safe, friendly, and family-style atmosphere that many of our students consider their second home.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">2. Do I need to be in shape for this?</div>
+            <div class="faq-q"><strong>2. Do I need to be in shape for this?</strong></div>
             <div class="faq-a">We are proud to cater to all fitness levels here at the academy and have many students whose exercise routines were limited or non-existent prior to joining the academy. Our team will ensure a progressive and gradual plan to help you acclimate to our programs while achieving your fitness goals.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">3. Am I too old to train?</div>
+            <div class="faq-q"><strong>3. Am I too old to train?</strong></div>
             <div class="faq-a">Classes are enjoyed by younger and older students alike. Our classes and programs are designed to meet the training goals and provide results for students of any age.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">4. Will I be expected to compete?</div>
+            <div class="faq-q"><strong>4. Will I be expected to compete?</strong></div>
             <div class="faq-a">Those who wish to do so can, but it is NOT a requirement.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">5. Do I need to have prior experience?</div>
+            <div class="faq-q"><strong>5. Do I need to have prior experience?</strong></div>
             <div class="faq-a">No. You do not need to have practiced in any form of martial art to train at our academy.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">6. Do you offer beginner level classes?</div>
+            <div class="faq-q"><strong>6. Do you offer beginner level classes?</strong></div>
             <div class="faq-a">Yes. We have beginner level classes that are designed for students with no experience through up to one year of experience. These classes, with a specific, detailed curriculum, stress the basics necessary to build a solid base and grow in a healthy and productive manner.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">7. Do you offer striking or kickboxing classes?</div>
+            <div class="faq-q"><strong>7. Do you offer striking or kickboxing classes?</strong></div>
             <div class="faq-a">Yes. We offer MMA training which incorporate Muay Thai Kickboxing and Boxing. These particular arts are a great complement to BJJ and are other major components of mixed martial arts today. In addition, it is a fantastic workout and a great way to keep in shape.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">8. I want to lose weight, can your school and programs help me?</div>
+            <div class="faq-q"><strong>8. I want to lose weight, can your school and programs help me?</strong></div>
             <div class="faq-a">Absolutely. Both our Brazilian Jiu-Jitsu and MMA Classes offer a fantastic workout that you cannot achieve through your typical gym routines. These classes involve your entire body and will develop and challenge your physical abilities. We have had many students who have combined healthy eating with our Brazilian Jiu-Jitsu and MMA programs to lose great amounts of weight.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">9. What does a typical class consist of?</div>
+            <div class="faq-q"><strong>9. What does a typical class consist of?</strong></div>
             <div class="faq-a">Each class begins with a warm-up routine designed to prepare your body for the actual class and help reduce injuries. After the warm-up, technical instruction begins. The techniques taught vary according to the instructor's goals for that particular class. After the technical instruction, students engage in live sparring or rolling. An essential part of every class, live sparring allows students to practice the techniques they have learned against a resisting partner, break a sweat, and reap the rewards of a very good workout.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">10. Do you offer family discounts?</div>
+            <div class="faq-q"><strong>10. Do you offer family discounts?</strong></div>
             <div class="faq-a">Yes. Please speak with staff regarding the discounts available to family members.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">11. What is the cost of membership?</div>
+            <div class="faq-q"><strong>11. What is the cost of membership?</strong></div>
             <div class="faq-a">Pricing will depend on each individual's needs. We encourage prospective students to try out an introductory class so that we can assess each individual's goals and determine what he or she would like to get out of training. We can then make a recommendation for frequency of training and what classes would be best suited for each individual.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">12. Do you offer classes for kids and at what age do you start at?</div>
+            <div class="faq-q"><strong>12. Do you offer classes for kids and at what age do you start at?</strong></div>
             <div class="faq-a">Yes, we currently offer kids and teens classes. Students for BJJ can enroll as young as 5 years old.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">13. How long will it take to get my Black Belt?</div>
+            <div class="faq-q"><strong>13. How long will it take to get my Black Belt?</strong></div>
             <div class="faq-a">This is a common question, but one that has no exact answer. The journey to black belt depends on each individual's abilities, perseverance, and dedication. Students must train hard and be prepared overcome many obstacles on their journey to black belt.</div>
           </div>
           <div class="faq-item">
-            <div class="faq-q">14. How do I get started?</div>
+            <div class="faq-q"><strong>14. How do I get started?</strong></div>
             <div class="faq-a">To get started with your training, contact us or give us a call @ <a href="tel:2532546538" style="color:#14307f; text-decoration:underline;">253-254-6538</a>. We look forward to seeing you on the mats!</div>
           </div>
         </div>
