--- a/index.html
+++ b/index.html
@@ -462,35 +462,47 @@
     <!-- Instructors Section -->
     <section id="instructors" class="instructors-section">
       <div class="instructors-title">Instructors</div>
-      <div class="instructors-list">
-        <div class="instructor-card">
-          <img src="mcm_5th_degree.jpg" alt="Professor Marcello C Monteiro" />
-          <h3>Professor Marcello C Monteiro</h3>
-          <p class="bio-short">Master Monteiro is well known in Brazil as a teacher and coach for creating fighting strategies...</p>
-          <p class="bio-full" style="display:none;">
-            Marcello C. Monteiro is recognized worldwide for his advanced and detailed instruction. He’s a certified <strong>6th Degree Black Belt</strong> under the legendary Ricardo de la Riva and has produced numerous champions. His systematic approach breaks down complex techniques for students at all levels, building the foundation for a successful Jiu-Jitsu journey.
-          </p>
-          <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
-        </div>
-        <div class="instructor-card">
-          <img src="michael_proctor.JPG" alt="Professor Michael Proctor" />
-          <h3>Professor Michael Proctor</h3>
-          <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
-          <p class="bio-full" style="display:none;">
-            Michael Proctor is a <strong>3rd Degree Black Belt</strong> under Marcello C. Monteiro. With over two decades of experience, he has dedicated his teaching to building a strong community and providing clear, effective instruction for both beginners and advanced students. Michael believes in empowering each student to reach their potential, on and off the mats.
-          </p>
-          <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
-        </div>
-        <div class="instructor-card">
-          <img src="david_gines.JPG" alt="Professor David Gines" />
-          <h3>Professor David Gines</h3>
-          <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
-          <p class="bio-full" style="display:none;">
-            David Gines has trained under both Michael Proctor and Marcello C. Monteiro, earning his <strong>2nd Degree Black Belt</strong>. He specializes in breaking down techniques for all ages and is passionate about helping students set and reach their martial arts and fitness goals.
-          </p>
-          <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
-        </div>
-      </div>
+<div class="instructors-list">
+  <div class="instructor-card">
+    <img src="mcm_5th_degree.jpg" alt="Professor Marcello C Monteiro" />
+    <h3>Professor Marcello C Monteiro</h3>
+    <p class="bio-short">Master Monteiro is well known in Brazil as a teacher and coach for creating fighting strategies...</p>
+    <p class="bio-full" style="display:none;">
+      Marcello C. Monteiro is recognized worldwide for his advanced and detailed instruction. He’s a certified <strong>6th Degree Black Belt</strong> under the legendary Ricardo de la Riva and has produced numerous champions. His systematic approach breaks down complex techniques for students at all levels, building the foundation for a successful Jiu-Jitsu journey.
+    </p>
+    <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
+  </div>
+  <div class="instructor-card">
+    <img src="michael_proctor.JPG" alt="Professor Michael Proctor" />
+    <h3>Professor Michael Proctor</h3>
+    <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
+    <p class="bio-full" style="display:none;">
+      Michael Proctor is a <strong>3rd Degree Black Belt</strong> under Marcello C. Monteiro. With over two decades of experience, he has dedicated his teaching to building a strong community and providing clear, effective instruction for both beginners and advanced students. Michael believes in empowering each student to reach their potential, on and off the mats.
+    </p>
+    <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
+  </div>
+  <div class="instructor-card">
+    <img src="david_gines.JPG" alt="Professor David Gines" />
+    <h3>Professor David Gines</h3>
+    <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
+    <p class="bio-full" style="display:none;">
+      David Gines has trained under both Michael Proctor and Marcello C. Monteiro, earning his <strong>2nd Degree Black Belt</strong>. He specializes in breaking down techniques for all ages and is passionate about helping students set and reach their martial arts and fitness goals.
+    </p>
+    <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
+  </div>
+  <div class="instructor-card">
+    <img src="marcus_finkel.png" alt="Marcus Finkel" />
+    <h3>Marcus Finkel</h3>
+  </div>
+  <div class="instructor-card">
+    <img src="donnie_mcmasters.png" alt="Donnie McMasters" />
+    <h3>Donnie McMasters</h3>
+  </div>
+  <div class="instructor-card">
+    <img src="chris_kuykendall.png" alt="Chris Kuykendall" />
+    <h3>Chris Kuykendall</h3>
+  </div>
+</div>
     </section>
 
     <!-- Code of Conduct -->
@@ -716,3 +728,4 @@
   </script>
 </body>
 </html>
+
