--- a/index.html
+++ b/index.html
@@ -494,17 +494,17 @@
     </div>
 
     <div class="instructor-card">
-      <img src="marcus_finkel.png" alt="Marcus Finkel" onclick="openImgPopup(this)" />
+      <img src="marcus_finkel.png" alt="Coach Marcus Finkel" onclick="openImgPopup(this)" />
       <h3>Marcus Finkel</h3>
     </div>
 
     <div class="instructor-card">
-      <img src="donnie_mcmasters.png" alt="Donnie McMasters" onclick="openImgPopup(this)" />
+      <img src="donnie_mcmasters.png" alt="Coach Donnie McMasters" onclick="openImgPopup(this)" />
       <h3>Donnie McMasters</h3>
     </div>
 
     <div class="instructor-card">
-      <img src="chris_kuykendall.png" alt="Chris Kuykendall" onclick="openImgPopup(this)" />
+      <img src="chris_kuykendall.png" alt="Coach Chris Kuykendall" onclick="openImgPopup(this)" />
       <h3>Chris Kuykendall</h3>
     </div>
   </div>
@@ -733,5 +733,6 @@
   </script>
 </body>
 </html>
+
 
 
