--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     .instructor-card img {
       width: 150px;
       height: 200px;
-      object-fit: cover;
+      object-fit: contain;
       border-radius: 12px;
       margin-bottom: 12px;
       box-shadow: 0 1px 6px rgba(0,0,0,0.09);
@@ -733,6 +733,7 @@
   </script>
 </body>
 </html>
+
 
 
 
