--- a/index.html
+++ b/index.html
@@ -495,17 +495,17 @@
 
     <div class="instructor-card">
       <img src="marcus_finkel.png" alt="Coach Marcus Finkel" onclick="openImgPopup(this)" />
-      <h3>Marcus Finkel</h3>
+      <h3>Coach Marcus Finkel</h3>
     </div>
 
     <div class="instructor-card">
       <img src="donnie_mcmasters.png" alt="Coach Donnie McMasters" onclick="openImgPopup(this)" />
-      <h3>Donnie McMasters</h3>
+      <h3>Coach Donnie McMasters</h3>
     </div>
 
     <div class="instructor-card">
       <img src="chris_kuykendall.png" alt="Coach Chris Kuykendall" onclick="openImgPopup(this)" />
-      <h3>Chris Kuykendall</h3>
+      <h3>Coach Chris Kuykendall</h3>
     </div>
   </div>
 </section>
@@ -733,6 +733,7 @@
   </script>
 </body>
 </html>
+
 
 
 
