--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon-512x512.png">
   <meta name="theme-color" content="#000000">
 
+  <!-- PWA / iOS web-app -->
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="GRIT CITY BJJ">
+
   <style>
     body {
       background: #fff;
