--- a/testindex.html
+++ b/testindex.html
@@ -17,7 +17,7 @@ body {
   overflow-x: hidden;
 }
 section {
-  padding: 55px 18px;
+  padding: 45px 18px;
   max-width: 1100px;
   margin: 0 auto;
 }
@@ -25,23 +25,36 @@ h2 {
   text-align: center;
   font-size: 2rem;
   font-weight: 800;
-  margin-bottom: 25px;
+  margin-bottom: 22px;
 }
 
 /* --------------------------------------------------------------
-   HERO — team.png
+   IMAGE BANNERS (header.png, tacoma.png, face-off.png)
+-------------------------------------------------------------- */
+.banner-img {
+  width:100%;
+  height:auto;
+  display:block;
+  margin:25px 0 25px 0;
+  border-radius:14px;
+  box-shadow:0 5px 24px rgba(0,0,0,0.55);
+}
+
+/* --------------------------------------------------------------
+   HERO — team.png (TIGHT VERSION)
 -------------------------------------------------------------- */
 .hero {
   width: 100%;
-  height: 92vh;
-  min-height: 540px;
+  height: 45vh;                /* much tighter hero */
+  min-height: 360px;
   background: #000 url('team.png') center center no-repeat;
-  background-size: contain;
-  background-color: #000;
+  background-size: contain;     /* full image always visible */
+  background-color: #000;       /* letterbox background */
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  padding-bottom: 40px;
+  padding-bottom: 25px;
+  margin-top: 10px;
   position: relative;
 }
 .hero::after {
@@ -54,16 +67,17 @@ h2 {
   position:relative;
   text-align:center;
   z-index:10;
+  margin-bottom: 6px;
 }
 .hero-title {
-  font-size: 2.7rem;
+  font-size: 2.4rem;
   font-weight: 900;
+  margin-bottom: 4px;
 }
 .hero-sub {
-  font-size: 1.1rem;
+  font-size: 1rem;
   opacity:.9;
-  margin-top: 6px;
-  margin-bottom: 22px;
+  margin-bottom: 18px;
 }
 .hero-btns {
   display:flex;
@@ -72,7 +86,7 @@ h2 {
 }
 .btn-blue {
   background:#3B82F6;
-  padding:14px 24px;
+  padding:12px 22px;
   border-radius:10px;
   color:#fff;
   font-weight:800;
@@ -80,7 +94,7 @@ h2 {
 }
 .btn-blue-outline {
   background:transparent;
-  padding:14px 24px;
+  padding:12px 22px;
   border-radius:10px;
   color:#3B82F6;
   border:2px solid #3B82F6;
@@ -92,26 +106,25 @@ h2 {
    NAV BAR
 -------------------------------------------------------------- */
 .navbar {
-  background: rgba(10,10,10,0.85);
-  backdrop-filter: blur(7px);
+  background: rgba(10,10,10,0.75);
+  backdrop-filter: blur(6px);
   position: sticky;
   top: 0;
   z-index: 9999;
-  padding: 12px 0;
+  padding: 10px 0;
 }
 .nav-inner {
   max-width:1100px;
   margin:0 auto;
   display:flex;
   justify-content:center;
-  gap:22px;
+  gap:18px;
 }
 .nav-inner a {
   text-decoration:none;
   color:#fff;
   font-weight:700;
-  text-transform:uppercase;
-  font-size:.9rem;
+  font-size:.85rem;
   padding-bottom:4px;
   border-bottom:2px solid transparent;
 }
@@ -120,28 +133,16 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   IMAGE BANNERS
--------------------------------------------------------------- */
-.banner-img {
-  width:100%;
-  height:auto;
-  display:block;
-  margin:40px 0;
-  border-radius:14px;
-  box-shadow:0 5px 24px rgba(0,0,0,0.55);
-}
-
-/* --------------------------------------------------------------
    PROGRAMS
 -------------------------------------------------------------- */
 .program-grid {
   display:grid;
   grid-template-columns:repeat(2, 1fr);
-  gap:18px;
+  gap:16px;
 }
 .program-box {
   background:#111827;
-  padding:26px;
+  padding:22px;
   border-radius:14px;
   text-align:center;
   font-weight:800;
@@ -153,7 +154,7 @@ h2 {
 -------------------------------------------------------------- */
 .schedule-card {
   background:#111827;
-  padding:20px;
+  padding:16px;
   border-radius:14px;
   border:1px solid #1F2937;
 }
@@ -165,19 +166,19 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   LOCATION
+   LOCATION (UNCHANGED)
 -------------------------------------------------------------- */
 .location-card {
   background:#111827;
-  padding:26px;
+  padding:22px;
   border-radius:14px;
   border:1px solid #1F2937;
   text-align:center;
 }
 .location-thumbs {
   display:flex;
-  gap:12px;
-  margin-top:16px;
+  gap:10px;
+  margin-top:14px;
   justify-content:center;
 }
 .location-thumbs img {
@@ -190,17 +191,16 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   GALLERY
+   GALLERY (UNCHANGED)
 -------------------------------------------------------------- */
 .gallery-scroll {
   display:flex;
   overflow-x:auto;
-  gap:14px;
-  padding-bottom:10px;
+  gap:12px;
 }
 .gallery-scroll img {
-  width:260px;
-  height:160px;
+  width:240px;
+  height:150px;
   border-radius:12px;
   object-fit:cover;
   border:1px solid #1F2937;
@@ -208,12 +208,12 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   LINEAGE
+   LINEAGE (UNCHANGED)
 -------------------------------------------------------------- */
 .lineage-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit, minmax(130px,1fr));
-  gap:24px;
+  gap:22px;
   text-align:center;
 }
 .lineage-grid img {
@@ -224,18 +224,18 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   INSTRUCTORS
+   INSTRUCTORS (UNCHANGED)
 -------------------------------------------------------------- */
 .instructor-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-  gap:24px;
+  gap:22px;
 }
 .instructor-card {
   text-align:center;
   background:#111827;
   border-radius:14px;
-  padding:22px;
+  padding:20px;
   border:1px solid #1F2937;
 }
 .instructor-card img {
@@ -246,11 +246,11 @@ h2 {
 }
 
 /* --------------------------------------------------------------
-   BLUE GLOW ACCORDIONS
+   BLUE ACCORDION BUTTONS
 -------------------------------------------------------------- */
 .accordion-btn {
   width:100%;
-  padding:16px 20px;
+  padding:14px 18px;
   background:#0F172A;
   border:2px solid #3B82F6;
   color:#3B82F6;
@@ -267,14 +267,11 @@ h2 {
 }
 .accordion-content {
   display:none;
-  margin-top:14px;
+  margin-top:12px;
   background:#111827;
-  padding:20px;
+  padding:18px;
   border-radius:12px;
   border:1px solid #1F2937;
-}
-.accordion-content ul {
-  padding-left:20px;
 }
 
 /* --------------------------------------------------------------
@@ -306,20 +303,19 @@ form button:hover {
    FOOTER
 -------------------------------------------------------------- */
 footer {
-  padding:40px 18px;
+  padding:30px 18px;
   background:#080808;
   text-align:center;
-  margin-top:40px;
+  margin-top:30px;
 }
 .footer-logos {
   display:flex;
   justify-content:center;
-  gap:18px;
+  gap:16px;
   flex-wrap:wrap;
 }
 .footer-logos img {
-  width:120px;
-  height:auto;
+  width:110px;
   border-radius:12px;
   background:#111;
   padding:8px;
@@ -344,11 +340,15 @@ footer {
 </head>
 <body>
 
-<!-- HERO -->
+<!-- header.png ABOVE team.png -->
+<img src="header.png" class="banner-img" />
+
+<!-- HERO — team.png -->
 <div class="hero">
   <div class="hero-content">
     <div class="hero-title">GRIT CITY BJJ</div>
     <div class="hero-sub">BJJ COACH International Association in Tacoma, WA</div>
+
     <div class="hero-btns">
       <a href="#try" class="btn-blue">Try a Free Class</a>
       <a href="#schedule" class="btn-blue-outline">View Schedule</a>
@@ -356,7 +356,7 @@ footer {
   </div>
 </div>
 
-<!-- NAV -->
+<!-- NAVIGATION -->
 <div class="navbar">
   <div class="nav-inner">
     <a href="#conduct">Conduct</a>
@@ -365,9 +365,6 @@ footer {
     <a href="#try">Free Class</a>
   </div>
 </div>
-
-<!-- header.png -->
-<img src="header.png" class="banner-img" />
 
 <!-- PROGRAMS -->
 <section>
@@ -404,7 +401,10 @@ footer {
 </div>
 </section>
 
-<!-- face-off.png -->
+<!-- tacoma.png ABOVE face-off.png -->
+<img src="tacoma.png" class="banner-img" />
+
+<!-- face-off.png BELOW tacoma.png -->
 <img src="face-off.png" class="banner-img" />
 
 <!-- GALLERY -->
@@ -483,114 +483,96 @@ footer {
 
 <!-- CODE OF CONDUCT -->
 <section id="conduct">
-  <h2>Code of Conduct</h2>
-  <button class="accordion-btn" onclick="toggleAcc(this)">Expand Code of Conduct</button>
+<h2>Code of Conduct</h2>
+<button class="accordion-btn" onclick="toggleAcc(this)">Expand Code of Conduct</button>
+<div class="accordion-content">
 
-  <div class="accordion-content">
+<h3>Code of Conduct</h3>
+<ul>
+<li>01. Always be respectful.</li>
+<li>02. Always address Professors and Coaches accordingly.</li>
+<li>03. Uphold the integrity of our principles on and off the mats.</li>
+<li>04. If you are late, wait outside the mats until the Instructor gives you permission to join.</li>
+<li>05. Bow on and off the mats.</li>
+<li>06. Do not leave the mat area without permission from the Instructor.</li>
+<li>07. Sit or stand with good posture during demos.</li>
+<li>08. Minimal talking, only class-related.</li>
+<li>09. No foul language.</li>
+<li>10. Be Humble.</li>
+<li>11. Believe & Achieve.</li>
+</ul>
 
-    <h3 style="margin-top:0;">Code of Conduct</h3>
-    <ul>
-      <li>01. Always be respectful.</li>
-      <li>02. Always address Professors and Coaches accordingly.</li>
-      <li>03. Uphold the integrity of our principles on and off the mats.</li>
-      <li>04. If you are late, wait outside the mats until the Instructor gives you permission to join.</li>
-      <li>05. Bow on and off the mats.</li>
-      <li>06. Do not leave the mat area without permission from the Instructor.</li>
-      <li>07. During class, when the instructor is demonstrating techniques, every student must sit or stand in good posture.</li>
-      <li>08. Talking should be kept to a minimum level and should relate to the class subject.</li>
-      <li>09. No foul language inside the school.</li>
-      <li>10. Be Humble.</li>
-      <li>11. Believe & Achieve.</li>
-    </ul>
+<h3>Etiquette</h3>
+<ul>
+<li>12. No shoes on mats.</li>
+<li>13. Bottled drinks only.</li>
+<li>14. No electronics in training area.</li>
+<li>15. Change in changing rooms only.</li>
+<li>16. Gear belongs in bag area.</li>
+</ul>
 
-    <h3>Etiquette</h3>
-    <ul>
-      <li>12. No shoes on the mats. Shoes or flip flops required when you are not on the mats.</li>
-      <li>13. No food or open containers/cups. Bottled drinks only.</li>
-      <li>14. No electronic devices allowed in the training area.</li>
-      <li>15. Change in the designated changing areas. Do not change in the restrooms.</li>
-      <li>16. All training gear and bags should be left in the bag area, not on the benches or around the training area.</li>
-    </ul>
+<h3>Hygiene</h3>
+<ul>
+<li>17. Maintain good hygiene.</li>
+<li>18. Uniform must be clean.</li>
+<li>19. Trim fingernails & toenails.</li>
+<li>20. Remove all jewelry.</li>
+</ul>
 
-    <h3>Hygiene</h3>
-    <ul>
-      <li>17. Always keep good hygiene.</li>
-      <li>18. The uniform must be clean at all times.</li>
-      <li>19. Keep fingernails and toenails trimmed.</li>
-      <li>20. All jewelry, piercings, necklaces, and other items should be removed during training.</li>
-    </ul>
+<h3>Uniform</h3>
+<ul>
+<li>21. Wear academy patches at all times.</li>
+<li>22. No other school patches.</li>
+</ul>
 
-    <h3>Uniform</h3>
-    <ul>
-      <li>21. All students must wear our patches on their uniform at all times.</li>
-      <li>22. Absolutely no other school/affiliation patches may be worn for training.</li>
-    </ul>
+<h3>Spectators</h3>
+<ul>
+<li>23. Sit in designated area.</li>
+<li>24. Keep devices silent.</li>
+<li>25. No coaching from sidelines.</li>
+</ul>
 
-    <h3>Spectators</h3>
-    <ul>
-      <li>23. Spectators must sit in the designated seating area.</li>
-      <li>24. Keep all electronic devices silent unless given prior permission.</li>
-      <li>25. Absolutely NO coaching your children or other students during class.</li>
-    </ul>
-
-  </div>
+</div>
 </section>
 
 <!-- FAQS -->
 <section id="faqs">
-  <h2>Brazilian Jiu-Jitsu FAQ's</h2>
+<h2>Brazilian Jiu-Jitsu FAQ's</h2>
+<button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
 
-  <button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
+<div class="accordion-content">
 
-  <div class="accordion-content">
+<p><strong>1. What can BJJ and your school do for me?</strong><br>
+BJJ is a highly effective form of self-defense that promotes a healthy lifestyle…</p>
 
-    <p><strong>1. What can BJJ and your school do for me?</strong><br>
-    BJJ is a highly effective form of self-defense…</p>
+<p><strong>2. Do I need to be in shape for this?</strong><br>We cater to all fitness levels…</p>
 
-    <p><strong>2. Do I need to be in shape for this?</strong><br>
-    We cater to all fitness levels…</p>
+<p><strong>3. Am I too old to train?</strong><br>Classes are enjoyed by younger and older students alike…</p>
 
-    <p><strong>3. Am I too old to train?</strong><br>
-    Classes are enjoyed by all ages…</p>
+<p><strong>4. Will I be expected to compete?</strong><br>Competition is optional.</p>
 
-    <p><strong>4. Will I be expected to compete?</strong><br>
-    Competition is optional.</p>
+<p><strong>5. Do I need prior experience?</strong><br>No experience required.</p>
 
-    <p><strong>5. Do I need to have prior experience?</strong><br>
-    No experience required.</p>
+<p><strong>6. Do you offer beginner classes?</strong><br>Yes — structured curriculum…</p>
 
-    <p><strong>6. Do you offer beginner level classes?</strong><br>
-    Yes — structured intro curriculum…</p>
+<p><strong>7. Do you offer striking or kickboxing classes?</strong><br>Yes — MMA, Muay Thai, Boxing…</p>
 
-    <p><strong>7. Do you offer striking or kickboxing classes?</strong><br>
-    Yes — MMA, Muay Thai, Boxing…</p>
+<p><strong>8. Can BJJ help with weight loss?</strong><br>Absolutely…</p>
 
-    <p><strong>8. I want to lose weight, can your school help?</strong><br>
-    Absolutely…</p>
+<p><strong>9. What does a typical class consist of?</strong><br>Warmup → Technique → Rolling…</p>
 
-    <p><strong>9. What does a typical class consist of?</strong><br>
-    Warmup → Technique → Drills → Rolling…</p>
+<p><strong>10. Do you offer family discounts?</strong><br>Yes.</p>
 
-    <p><strong>10. Do you offer family discounts?</strong><br>
-    Yes — ask staff.</p>
+<p><strong>11. What is the cost of membership?</strong><br>Depends on your goals…</p>
 
-    <p><strong>11. What is the cost of membership?</strong><br>
-    Depends on training goals…</p>
+<p><strong>12. Do you offer classes for kids?</strong><br>Yes — age 5 and up.</p>
 
-    <p><strong>12. Do you offer classes for kids?</strong><br>
-    Yes — starting at age 5.</p>
+<p><strong>13. How long to get a Black Belt?</strong><br>No fixed timeline.</p>
 
-    <p><strong>13. How long will it take to get my Black Belt?</strong><br>
-    No exact timeline.</p>
+<p><strong>14. How do I get started?</strong><br>Call <a href="tel:2532546538" style="color:#3B82F6;font-weight:700;">253-254-6538</a>.</p>
 
-    <p><strong>14. How do I get started?</strong><br>
-    Call <a href="tel:2532546538" style="color:#3B82F6;font-weight:700;">253-254-6538</a>.</p>
-
-  </div>
+</div>
 </section>
-
-<!-- tacoma.png -->
-<img src="tacoma.png" class="banner-img" />
 
 <!-- TRY FREE CLASS -->
 <section id="try">
