--- a/testindex.html
+++ b/testindex.html
@@ -40,10 +40,10 @@ h2 {
   box-shadow:0 5px 24px rgba(0,0,0,0.55);
 }
 
-/* REMOVE SPACE UNDER HEADER ONLY */
+/* REMOVE ALL SPACE UNDER HEADER */
 .banner-img.header {
-  margin-bottom: 0;      /* ← eliminates the gap */
-  margin-top: 0;         /* ← tightens the top also */
+  margin:0;
+  padding:0;
 }
 
 /* --------------------------------------------------------------
@@ -60,8 +60,7 @@ h2 {
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 25px;
-  margin-top: 0;          /* ← prevents ANY gap between header & hero */
-  position: relative;
+  margin: 0; /* ← NO SPACE BETWEEN HEADER & TEAM */
 }
 .hero::after {
   content:"";
@@ -314,14 +313,27 @@ footer {
   text-align:center;
   margin-top:30px;
 }
-.footer-logos {
+
+/* NEW FOOTER LAYOUT REQUESTED */
+.footer-two {
   display:flex;
   justify-content:center;
-  gap:16px;
+  gap:22px;
   flex-wrap:wrap;
+  margin-bottom:16px;
 }
-.footer-logos img {
-  width:110px;
+.footer-two img {
+  width:120px;
+  border-radius:12px;
+  background:#111;
+  padding:8px;
+}
+.footer-one {
+  display:flex;
+  justify-content:center;
+}
+.footer-one img {
+  width:140px;
   border-radius:12px;
   background:#111;
   padding:8px;
@@ -346,10 +358,10 @@ footer {
 </head>
 <body>
 
-<!-- header.png ABOVE team.png, no space below it -->
+<!-- header.png (NO SPACE BELOW) -->
 <img src="header.png" class="banner-img header" />
 
-<!-- HERO — team.png, no gap above it -->
+<!-- HERO — team.png -->
 <div class="hero">
   <div class="hero-content">
     <div class="hero-title">GRIT CITY BJJ</div>
@@ -498,44 +510,44 @@ footer {
 <li>01. Always be respectful.</li>
 <li>02. Always address Professors and Coaches accordingly.</li>
 <li>03. Uphold the integrity of our principles on and off the mats.</li>
-<li>04. If you are late, wait outside the mats until the Instructor gives you permission to join.</li>
+<li>04. If you are late, wait outside until permitted to join.</li>
 <li>05. Bow on and off the mats.</li>
-<li>06. Do not leave the mat area without permission.</li>
-<li>07. Sit or stand with good posture during demos.</li>
-<li>08. Talking should be minimal and relevant.</li>
+<li>06. No leaving mat area without permission.</li>
+<li>07. Maintain posture during instruction.</li>
+<li>08. Talking minimal and relevant only.</li>
 <li>09. No foul language.</li>
-<li>10. Be Humble.</li>
+<li>10. Be humble.</li>
 <li>11. Believe & Achieve.</li>
 </ul>
 
 <h3>Etiquette</h3>
 <ul>
-<li>12. No shoes on mats.</li>
-<li>13. Bottled drinks only.</li>
-<li>14. No electronics in training area.</li>
-<li>15. Change in designated rooms only.</li>
-<li>16. Gear must be stored properly.</li>
+<li>No shoes on mats.</li>
+<li>Bottled drinks only.</li>
+<li>No electronics in training area.</li>
+<li>Change only in designated areas.</li>
+<li>Gear stored in proper areas.</li>
 </ul>
 
 <h3>Hygiene</h3>
 <ul>
-<li>17. Maintain good hygiene.</li>
-<li>18. Clean uniforms only.</li>
-<li>19. Trim nails.</li>
-<li>20. Remove all jewelry.</li>
+<li>Maintain hygiene.</li>
+<li>Uniform must be clean.</li>
+<li>Trim nails.</li>
+<li>Remove all jewelry.</li>
 </ul>
 
 <h3>Uniform</h3>
 <ul>
-<li>21. Academy patches required.</li>
-<li>22. No other school patches allowed.</li>
+<li>Academy patches required.</li>
+<li>No other school patches allowed.</li>
 </ul>
 
 <h3>Spectators</h3>
 <ul>
-<li>23. Stay in designated area.</li>
-<li>24. Devices must be silent.</li>
-<li>25. No coaching from sidelines.</li>
+<li>Remain in designated seating.</li>
+<li>Devices silent.</li>
+<li>No coaching from sidelines.</li>
 </ul>
 
 </div>
@@ -548,33 +560,46 @@ footer {
 <div class="accordion-content">
 
 <p><strong>1. What can BJJ and your school do for me?</strong><br>
-BJJ is a highly effective form of self-defense that promotes a healthy lifestyle…</p>
+BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
 
-<p><strong>2. Do I need to be in shape?</strong><br>We cater to all fitness levels…</p>
+<p><strong>2. Do I need to be in shape?</strong><br>
+We welcome all fitness levels.</p>
 
-<p><strong>3. Am I too old to train?</strong><br>All ages train here…</p>
+<p><strong>3. Am I too old?</strong><br>
+No — all ages train.</p>
 
-<p><strong>4. Will I be expected to compete?</strong><br>Competition is optional.</p>
+<p><strong>4. Will I be expected to compete?</strong><br>
+Competition is optional.</p>
 
-<p><strong>5. Do I need prior experience?</strong><br>No experience required.</p>
+<p><strong>5. Prior experience needed?</strong><br>
+No.</p>
 
-<p><strong>6. Do you offer beginner classes?</strong><br>Yes — structured curriculum…</p>
+<p><strong>6. Beginner classes?</strong><br>
+Yes — structured basics.</p>
 
-<p><strong>7. Do you offer striking?</strong><br>MMA, Muay Thai, Boxing…</p>
+<p><strong>7. Striking?</strong><br>
+Yes — MMA, Muay Thai, Boxing.</p>
 
-<p><strong>8. Can BJJ help with weight loss?</strong><br>Absolutely…</p>
+<p><strong>8. Weight loss?</strong><br>
+Very effective.</p>
 
-<p><strong>9. What does a typical class consist of?</strong><br>Warmup → Technique → Rolling…</p>
+<p><strong>9. Class structure?</strong><br>
+Warmup → Technique → Rolling.</p>
 
-<p><strong>10. Do you offer family discounts?</strong><br>Yes.</p>
+<p><strong>10. Family discounts?</strong><br>
+Yes.</p>
 
-<p><strong>11. What is the cost of membership?</strong><br>Depends on goals…</p>
+<p><strong>11. Membership cost?</strong><br>
+Varies based on goals.</p>
 
-<p><strong>12. Do you offer kids classes?</strong><br>Yes — age 5+.</p>
+<p><strong>12. Kids classes?</strong><br>
+Age 5+.</p>
 
-<p><strong>13. How long to get a Black Belt?</strong><br>No fixed timeline.</p>
+<p><strong>13. Time to Black Belt?</strong><br>
+Depends on dedication.</p>
 
-<p><strong>14. How do I get started?</strong><br>Call <a href="tel:2532546538" style="color:#3B82F6;font-weight:700;">253-254-6538</a>.</p>
+<p><strong>14. How to start?</strong><br>
+Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.</p>
 
 </div>
 </section>
@@ -589,6 +614,9 @@ BJJ is a highly effective form of self-defense that promotes a healthy lifestyle
   <textarea name="Message" rows="4" placeholder="Your Message (optional)"></textarea>
   <button>Submit</button>
 </form>
+
+<!-- INTRODUCTORY IMAGE DIRECTLY BELOW FORM -->
+<img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
 <!-- POPUP -->
@@ -609,11 +637,18 @@ function toggleAcc(btn){
 
 <!-- FOOTER -->
 <footer>
-<div class="footer-logos">
-  <img src="sanitized_facility.jpg">
+
+<!-- TOP ROW — military + no bullies (side by side) -->
+<div class="footer-two">
   <img src="military_discounts.gif">
   <img src="no_bullies.jpg">
 </div>
+
+<!-- SECOND ROW — sanitized below them centered -->
+<div class="footer-one">
+  <img src="sanitized_facility.jpg">
+</div>
+
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
 
